--- a/content/themes/storyrugs/style.css
+++ b/content/themes/storyrugs/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: [INIT]
-Theme URI: [INIT]
+Theme Name: STORY RUGS
+Theme URI: STORY RUGS
 Author: SDCO Partners 
 Author URI: https://SDCOPartners.com
-Description: Southeast Land Management Copyright 2017 SDCOPartners
+Description: STORY RUGS Copyright 2017 SDCOPartners
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
