--- a/content/themes/storyrugs/src/sass/_variables.sass
+++ b/content/themes/storyrugs/src/sass/_variables.sass
@@ -1,15 +1,43 @@
 /* Colors */
-
-$black: 
+$black: #000
+$darkgrey: #333
+$rust: #bf4e2b
+$litegrey: #f2f2f2
 $white: #fff
 
-/* Font Sizes & Fonts */
 
-$sx3: 0.5em
-$sx2: 0.7em
-$sx1: 0.8em
-$body: 18px
-$bx1: 1.2em 
-$bx2: 1.4em
-$bx3: 1.6em  
+/* Fonts */
+=millerbanner
+  font-family: "Miller Ban Rom", "Georgia", serif
+  font-style: Normal
+  font-weight: Normal
 
+=gothbook
+  font-family: "Gotham SSm A", "Gotham SSm B", "Helvetica", sans-serif
+  font-style: normal
+  font-weight: 400
+
+=gothmed
+  font-family: "Gotham SSm A", "Gotham SSm B", "Helvetica", sans-serif
+  font-style: normal
+  font-weight: 500
+
+=gothbold
+  font-family: "Gotham SSm A", "Gotham SSm B", "Helvetica", sans-serif
+  font-style: normal
+  font-weight: 700
+
+=chronicrom
+	font-family: "Chronicle Display A", "Chronicle Display B", 'Georgia', serif
+	font-style: normal
+	font-weight: 400
+
+=chronicitalic
+	font-family: "Chronicle Display A", "Chronicle Display B", "Georgia", serif
+	font-style: italic
+	font-weight: 400
+
+=garamond
+	font-family: "Garamond", serif
+	font-style: normal
+	font-weight: 400
