Build out image half of product page

--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -20,8 +20,7 @@ html
   box-sizing: inherit
 
 body
-  border: 12px solid $black
-  padding: 16px
+  padding: 18px
   background-color: $white
 
 img
@@ -38,6 +37,8 @@ img
 
 
 /* Styles ... */
+@import 'borders'
+
 @import 'nav'
 
 @import 'foot'
@@ -51,3 +52,5 @@ img
 @import 'text'
 
 @import 'products'
+
+@import 'collection'
