--- a/content/themes/storyrugs/src/sass/_collection.sass
+++ b/content/themes/storyrugs/src/sass/_collection.sass
@@ -31,8 +31,10 @@
     padding: 0 75px 140px 75px
 
     .co-image
-      width: 100%
       height: 800px
+      max-width: 680px
+      margin-left: auto
+      margin-right: 0
 
   .wrapper:nth-of-type(even)
     margin-top: 15px
@@ -49,8 +51,79 @@
     padding: 75px
 
     .co-image
-      width: 100%
       height: 650px
+      max-width: 680px
+      margin-left: auto
+      margin-right: 0
+
+.co-content
+  padding: 75px
+  max-width: 500px
+  margin: 0 auto
+
+  .co-head
+    position: relative
+    margin-bottom: 80px
+
+    &:after
+      position: absolute
+      bottom: -40px
+      left: calc(50% - 35px)
+      width: 70px
+      height: 2px
+
+    h3
+      margin-bottom: 15px
+
+  .co-details
+    .price
+      width: 100%
+      margin: 0 auto
+
+    .desc
+      margin-top: 50px
+
+  .co-attributes
+    margin-top: 150px
+
+  .co-dimensions
+    width: 100%
+    padding-top: 15px
+
+  .co-cart
+    form
+      width: 175px
+      height: 
+      margin: 50px auto 0
+
+      button
+        padding: 5px 15px
+  
+  .co-share
+    margin-top: 150px
+
+    .social-wrapper
+      +flex
+      width: 130px
+      height: 100px
+      margin: 0 auto
+      padding-top: 30px
+    
+    .social-icon
+      flex: 0 0 25%
+
+      svg
+        width: 20px
+        height: 20px
+
+        .cls-1
+          transition: 0.4s fill
+
+      &:hover
+        .cls-1
+          fill: $rust
+
+
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
@@ -68,4 +141,76 @@
 
   .wrapper:nth-of-type(odd)
     background-color: $litegrey
+
+.co-content
+  .co-head
+    &:after
+      content: " "
+      background-color: $darkgrey
+
+    h3
+      +millerbanner
+      color: $black
+      font-size: 2.4rem
+      line-height: 1.2em
+      text-align: center
+      text-transform: lowercase
+
+    .excerpt
+      +gothmed
+      color: $darkgrey
+      font-size: 0.55rem
+      text-align: center
+      text-transform: uppercase
+      letter-spacing: 0.15rem
+
+  .co-details
+    .price
+      +chronicrom
+      color: $rust
+      text-align: center
+      font-size: 1.4rem
+
+    .desc
+      +chronicrom
+      font-size: 1.1rem
+      line-height: 1.5rem
+      letter-spacing: 0.01rem
+      text-align: center
+
+  .co-attributes
+    +gothmed
+
+    h4
+      font-size: 0.8rem
+      letter-spacing: 0.21rem
+      text-align: center
+      text-transform: uppercase
+
+    .co-dimensions
+      font-size: 0.6rem
+      letter-spacing: 0.1rem
+      text-align: center
+
+  .co-cart
+    .button
+      +gothmed
+      background-color: $white
+      font-size: 0.8rem
+      letter-spacing: 0.1rem
+      text-transform: uppercase
+      transition: 0.4s color, 0.4s background-color
+
+      &:hover
+        background-color: $darkgrey
+        color: $white
+
+  .co-share
+    h4
+      +gothmed
+      font-size: 0.6rem
+      letter-spacing: 0.1rem
+      text-transform: uppercase
+      text-align: center
+  
 
