Change Reproductions from Product to Custom Post Type

--- a/content/themes/storyrugs/src/sass/_collection.sass
+++ b/content/themes/storyrugs/src/sass/_collection.sass
@@ -98,6 +98,9 @@
 
       button
         padding: 5px 15px
+
+    .stock
+      margin-top: 50px
   
   .co-share
     margin-top: 150px
@@ -204,6 +207,14 @@
       &:hover
         background-color: $darkgrey
         color: $white
+
+    .stock
+      +gothmed
+      color: $rust
+      font-size: 0.8rem
+      letter-spacing: 0.1rem
+      text-transform: uppercase
+      text-align: center
 
   .co-share
     h4
