Add portfolio and purchaseForms sass files

--- a/content/themes/storyrugs/src/sass/_portfolio.sass
+++ b/content/themes/storyrugs/src/sass/_portfolio.sass
@@ -1,20 +1,10 @@
-/*  _collection.sass */
+/*  _portfolio.sass */
 
 /* PAGE CONTEXT -> For positioning items */
 /* includes positioning styles like display, padding, margin, height */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
-
-.collection-wrapper
-  .product
-    +flex
-
-    .co-images
-      flex: 0 0 60%
-
-    .co-content
-      flex: 0 0 40%
-
+.portfolio
 
 
 /* OBJECTS -> For styling objects */
