--- a/content/themes/storyrugs/src/sass/_purchaseForm.sass
+++ b/content/themes/storyrugs/src/sass/_purchaseForm.sass
@@ -1,23 +1,20 @@
-/*  _collection.sass */
+/*  _purchaseForm.sass */
 
 /* PAGE CONTEXT -> For positioning items */
 /* includes positioning styles like display, padding, margin, height */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
 
-.collection-wrapper
-  .product
-    +flex
-
-    .co-images
-      flex: 0 0 60%
-
-    .co-content
-      flex: 0 0 40%
-
+.purchase-form
+  width: 80%
+  margin: 0 auto
 
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
+.purchase-form
+  .form-header
+    h3
+    
