--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -54,3 +54,11 @@ img
 @import 'products'
 
 @import 'collection'
+
+@import 'coImages'
+
+@import 'coContent'
+
+@import 'purchaseForm'
+
+@import 'portfolio'
