--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -53,6 +53,8 @@ img
 
 @import 'products'
 
+@import 'contentHead'
+
 @import 'collection'
 
 @import 'coImages'
@@ -62,3 +64,5 @@ img
 @import 'purchaseForm'
 
 @import 'portfolio'
+
+@import 'myAccount'
