--- a/content/themes/storyrugs/src/sass/_myAccount.sass
+++ b/content/themes/storyrugs/src/sass/_myAccount.sass
@@ -1,21 +1,19 @@
-/*  _main.sass */
+/*  _example-style.sass */
 
 /* PAGE CONTEXT -> For positioning items */
 /* includes positioning styles like display, padding, margin, height */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
-.page-banner
-  width: 90%
-  max-width: 1500px
-  height: 680px
-  margin: 0 auto
 
+.woocommerce-MyAccount-Navigation
+  width: 100%
+  height: 250px
+
+  ul
+    +flex
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
-.page-banner
-  +img
-
-
+.woocommerce-MyAccount-Navigation
