--- a/content/themes/storyrugs/src/sass/_portfolio.sass
+++ b/content/themes/storyrugs/src/sass/_portfolio.sass
@@ -5,9 +5,31 @@
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
 .portfolio
+  width: 80%
+  margin: 150px auto  
+  height: 50vw
+  
+  .gallery
+    padding-top: 50px
+    ul
+      position: relative
 
+    li
+      position: absolute
+      top: 0
+      left: 0
+      opacity: 1
+      width: 100%
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
+.portfolio
+  h3
+    +gothbold
+    color: $darkgrey
+    font-size: 1.5rem
+    letter-spacing: 0.25rem
+    text-align: center
+    text-transform: uppercase
