--- a/content/themes/storyrugs/src/sass/_text.sass
+++ b/content/themes/storyrugs/src/sass/_text.sass
@@ -94,6 +94,11 @@
 
   h4
     +gothbold
+    font-size: 0.7rem
+    letter-spacing: 0.15rem
+    background-color: $darkgrey
+    color: $white
+    transition: 0.4s color, 0.4s background-color
     color: $darkgrey
     background-color: $white
     font-size: 1.3rem
