--- a/content/themes/storyrugs/src/sass/_myAccount.sass
+++ b/content/themes/storyrugs/src/sass/_myAccount.sass
@@ -138,6 +138,7 @@
 
 
 .woocommerce-MyAccount-content
+  p, 
   .woocommerce-message, 
   .woocommerce-Message
     +millerbanner
@@ -200,7 +201,7 @@
       &:hover
         color: $darkgrey
 
-  input,
+  input
     +gothmed
     color: $darkgrey
     font-size: 0.6rem
