--- a/content/themes/storyrugs/src/sass/_cart.sass
+++ b/content/themes/storyrugs/src/sass/_cart.sass
@@ -31,15 +31,23 @@
         padding: 5px
 
 .coupon
-  margin-bottom: 20px
+  margin: 2px auto
+  width: 400px
+
   .input-text
     padding: 5px
     margin-left: 15px
     margin-right: 15px
 
 
+
 .actions
   padding-top: 60px
+
+  > input:first-of-type
+    margin: 20px auto
+    width: 150px
+    display: block
 
 .cart-collaterals
   margin-top: 55px
@@ -69,21 +77,21 @@
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
 .woocommerce-cart-form
-  thead
-    tr
+  .woocommerce-cart-form__contents
+    thead
+      th
+        +gothmed
+        color: $darkgrey
+        font-size: 0.55rem
+        letter-spacing: 0.1rem
+        text-transform: uppercase
+        border-right: 1px solid $darkgrey
+        text-align: center
 
-    th
-      +gothmed
-      color: $darkgrey
-      font-size: 0.55rem
-      letter-spacing: 0.1rem
-      text-transform: uppercase
-      border-right: 1px solid $darkgrey
-
-    th:first-child,
-    th:nth-child(2),
-    th:last-of-type
-      border: none
+      th:first-child,
+      th:nth-child(2),
+      th:last-of-type
+        border: none
 
   tbody
     tr 
@@ -154,8 +162,6 @@
     text-align: center
     text-transform: uppercase
 
-    +placeholder
-      // +gothmed
 
   input.button
     +gothmed
@@ -175,6 +181,11 @@
     &:hover
       background-color: $white
       color: $darkgrey
+
+  label
+    color: $darkgrey
+    text-transform: capitalize
+
 
 .actions
   > input.button
@@ -196,6 +207,9 @@
       color: $white
       background-color: $darkgrey
 
+  > input:first-of-type
+    text-align: center
+
 .cart-collaterals
   h2
     +millerbanner
@@ -207,7 +221,7 @@
     text-align: center
 
 
-.cart-collaterals
+.woocommerce-cart-form
   .shop_table, 
   .shop_table_responsive
     th
@@ -228,14 +242,13 @@
       text-align: left
       text-transform: lowercase
 
-
+.cart-collaterals
   .wc-proceed-to-checkout
     +gothmed
     font-size: 0.55rem
     letter-spacing: 0.1rem
     text-transform: uppercase
     text-align: center
-    border-right: 20px solid $white
 
     a
       color: $darkgrey
@@ -247,9 +260,9 @@
 .woocommerce-message,
 .woocommerce-error,
 .woocommerce-error li
-  +gothmed
-  font-size: 0.85rem
-  letter-spacing: 0.1rem
-  text-transform: uppercase
+  +millerbanner
+  color: $darkgrey
+  font-size: 1.1rem
+  letter-spacing: 0.005rem
+  line-height: 1.9rem
   text-align: center
-  border-right: 20px solid $white
